# unispeak

./: LICENSE  gsapi.py  gspeak.py  gspeakTest.py  gspeak_modern_test.py  gspeak_with_gsapi_addon-test.py  mactalk.py  pyproject.toml  readme.txt  release-notes  test.py
.github/workflows/: python-package-conda.yml
src/: linux.py  unispeak.py
